# ancroo-backend

./: .env.example  .gitignore  .gitleaks.toml  Dockerfile  LICENSE  README.md  SECURITY.md  install-stack.sh  pyproject.toml
.github/workflows/: docker-publish.yml
docs/: api.md
internal/: README.md
internal/standalone/: .env.standalone  compose.standalone.yml
module/: compose.build.yml  compose.ports.yml  compose.sso.yml  compose.traefik.yml  compose.yml  homepage.ssl.yml  homepage.yml  module.conf  module.env  setup.sh  sso-setup.sh
